# codedump

./: .gitignore  LICENSE  README.md  build_codedump.bat  codedump.py  codedump_gui.py  pyproject.toml  setup.py
codedump/: codedump.py
